@@ -59,10 +59,10 @@ describe BinData::Registry, "with numerics" do
   let(:r) { BinData::RegisteredClasses }
 
   it "lookup integers with endian" do
-    r.lookup("int24", :big).to_s.must_equal "BinData::Int24be"
-    r.lookup("int24", :little).to_s.must_equal "BinData::Int24le"
-    r.lookup("uint24", :big).to_s.must_equal "BinData::Uint24be"
-    r.lookup("uint24", :little).to_s.must_equal "BinData::Uint24le"
+    r.lookup("int24", {:endian => :big}).to_s.must_equal "BinData::Int24be"
+    r.lookup("int24", {:endian => :little}).to_s.must_equal "BinData::Int24le"
+    r.lookup("uint24", {:endian => :big}).to_s.must_equal "BinData::Uint24be"
+    r.lookup("uint24", {:endian => :little}).to_s.must_equal "BinData::Uint24le"
   end
 
   it "does not lookup integers without endian" do
@@ -76,18 +76,18 @@ describe BinData::Registry, "with numerics" do
       r.lookup("int3")
     }.must_raise BinData::UnRegisteredTypeError
     lambda {
-      r.lookup("int3", :big)
+      r.lookup("int3", {:endian => :big})
     }.must_raise BinData::UnRegisteredTypeError
     lambda {
-      r.lookup("int3", :little)
+      r.lookup("int3", {:endian => :little})
     }.must_raise BinData::UnRegisteredTypeError
   end
 
   it "lookup floats with endian" do
-    r.lookup("float", :big).to_s.must_equal "BinData::FloatBe"
-    r.lookup("float", :little).to_s.must_equal "BinData::FloatLe"
-    r.lookup("double", :big).to_s.must_equal "BinData::DoubleBe"
-    r.lookup("double", :little).to_s.must_equal "BinData::DoubleLe"
+    r.lookup("float", {:endian => :big}).to_s.must_equal "BinData::FloatBe"
+    r.lookup("float", {:endian => :little}).to_s.must_equal "BinData::FloatLe"
+    r.lookup("double", {:endian => :big}).to_s.must_equal "BinData::DoubleBe"
+    r.lookup("double", {:endian => :little}).to_s.must_equal "BinData::DoubleLe"
   end
 
   it "lookup bits" do
@@ -97,17 +97,17 @@ describe BinData::Registry, "with numerics" do
   end
 
   it "lookup bits by ignoring endian" do
-    r.lookup("bit2", :big).to_s.must_equal "BinData::Bit2"
-    r.lookup("bit3le", :big).to_s.must_equal "BinData::Bit3le"
-    r.lookup("bit2", :little).to_s.must_equal "BinData::Bit2"
-    r.lookup("bit3le", :little).to_s.must_equal "BinData::Bit3le"
+    r.lookup("bit2", {:endian => :big}).to_s.must_equal "BinData::Bit2"
+    r.lookup("bit3le", {:endian => :big}).to_s.must_equal "BinData::Bit3le"
+    r.lookup("bit2", {:endian => :little}).to_s.must_equal "BinData::Bit2"
+    r.lookup("bit3le", {:endian => :little}).to_s.must_equal "BinData::Bit3le"
   end
 
   it "lookup signed bits by ignoring endian" do
-    r.lookup("sbit2", :big).to_s.must_equal "BinData::Sbit2"
-    r.lookup("sbit3le", :big).to_s.must_equal "BinData::Sbit3le"
-    r.lookup("sbit2", :little).to_s.must_equal "BinData::Sbit2"
-    r.lookup("sbit3le", :little).to_s.must_equal "BinData::Sbit3le"
+    r.lookup("sbit2", {:endian => :big}).to_s.must_equal "BinData::Sbit2"
+    r.lookup("sbit3le", {:endian => :big}).to_s.must_equal "BinData::Sbit3le"
+    r.lookup("sbit2", {:endian => :little}).to_s.must_equal "BinData::Sbit2"
+    r.lookup("sbit3le", {:endian => :little}).to_s.must_equal "BinData::Sbit3le"
   end
 end
 
@@ -120,16 +120,37 @@ describe BinData::Registry, "with endian specific types" do
   end
   
   it "lookup little endian types" do
-    r.lookup('a', :little).must_equal A
+    r.lookup('a', {:endian => :little}).must_equal A
   end
 
   it "lookup big endian types" do
-    r.lookup('b', :big).must_equal B
+    r.lookup('b', {:endian => :big}).must_equal B
   end
 
   it "does not lookup types with non existent endian" do
     lambda {
-      r.lookup('a', :big)
+      r.lookup('a', {:endian => :big})
     }.must_raise BinData::UnRegisteredTypeError
+  end
+end
+
+describe BinData::Registry, "with search_prefix" do
+  let(:r) { BinData::Registry.new }
+
+  before do
+    r.register('a_f', A)
+    r.register('b_f', B)
+  end
+
+  it "lookup single search_prefix" do
+    r.lookup('f', {:search_prefix => :a}).must_equal A
+  end
+
+  it "lookup multiple search_prefix" do
+    r.lookup('f', {:search_prefix => [:x, :a]}).must_equal A
+  end
+
+  it "lookup first match in search_prefix" do
+    r.lookup('f', {:search_prefix => [:a, :b]}).must_equal A
   end
 end
